--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "devDependencies": {
     "@types/config": "^0.0.41",
     "@types/express": "^4.17.13",
+    "@types/lodash": "^4.14.178",
     "@types/mongoose": "^5.11.97",
     "@types/node": "^17.0.15",
     "@types/pino": "^7.0.5",
@@ -22,6 +23,7 @@
   "dependencies": {
     "config": "^3.3.7",
     "express": "^4.17.2",
+    "lodash": "^4.17.21",
     "mongoose": "^6.2.0",
     "pino": "^7.6.5",
     "pino-pretty": "^7.5.1"
