--- a/package.json
+++ b/package.json
@@ -23,6 +23,8 @@
   "dependencies": {
     "config": "^3.3.7",
     "express": "^4.17.2",
+    "express-jwt": "^6.1.0",
+    "jwks-rsa": "^2.0.5",
     "lodash": "^4.17.21",
     "mongoose": "^6.2.0",
     "pino": "^7.6.5",
