--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "config": "^3.3.7",
     "express": "^4.17.2",
     "express-jwt": "^6.1.0",
+    "express-validator": "^6.14.0",
     "jwks-rsa": "^2.0.5",
     "lodash": "^4.17.21",
     "mongoose": "^6.2.0",
